zip/mdapiOTVLwr/unpackaged/objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>ACR_DATET_Deactivate__c</fullName>
        <description>Records the moment of deactivation of the IsActive field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deactivate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACR_TXT_JobId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACR_TXT_RelationId__c</fullName>
        <description>GlobaldId + CompanyId</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>RelationId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CHK_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHK_Enrollment_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrollment Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCK_Enrollment_Request__c</fullName>
        <label>Enrollment Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Subsidiary Selection Pending</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Without Enrollment</fullName>
                    <isActive>false</isActive>
                    <label>Without Enrollment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>VR01_IsActiveRegisterDate</fullName>
        <active>true</active>
        <description>Register date only when IsActice is deactivated.</description>
        <errorConditionFormula>AND(
    IsActive = FALSE,
			 ISBLANK(ACR_DATET_Deactivate__c) 
)</errorConditionFormula>
        <errorDisplayField>ACR_DATET_Deactivate__c</errorDisplayField>
        <errorMessage>Required if the Active is not checked</errorMessage>
    </validationRules>
</CustomObject>